2006-05-13 20:27  bchiara

	* glade/etherape.glade2: use stock objects for std menu names.
	Borrowed by debian package, thanks to F.Peters

2006-05-13 19:44  bchiara

	* debian/: changelog, control, copyright, etherape-root.desktop,
	etherape.xpm, files, manpages, menu, rules, watch: aligned to
	latest debian package (maintaner F.Peters)

2006-05-06 08:02  bchiara

	* ChangeLog, NEWS, html/NEWS.html, po/es.po, po/etherape.pot,
	po/fr.po, po/nl.po, po/tr.po: release 0.9.5

2006-04-30 07:25  bchiara

	* ChangeLog, src/traffic_stats.c, src/traffic_stats.h, src/util.c:
	beginning of file dump of stats

2006-04-29 07:58  bchiara

	* ChangeLog, config.h.in, configure.in, src/capture.c,
	src/decode_proto.c, src/direct_resolve.c, src/ip-cache.c,
	src/ip-cache.h, src/names.c, src/names_netbios.c,
	src/names_netbios.h, src/resolv.c, src/util.c, src/util.h: better
	control of netbios name decoding, configure tweaks, enhanced space
	checks

2006-04-25 07:08  bchiara

	* configure.in, src/Makefile.am, src/thread_resolve.c: changes to
	work with system without test built-in

2006-04-16 11:04  bchiara

	* ChangeLog, TODO: updated TODO

2006-04-16 10:56  bchiara

	* AUTHORS, ChangeLog, NEWS, html/FAQ.html, html/NEWS.html: Updated
	docs

2006-04-16 09:06  bchiara

	* doc/xmldocs.make: another scrollkeeper fix

2006-04-15 18:19  bchiara

	* ChangeLog, Makefile.am, configure.in: Check for
	gethostbyaddr,gethostbyaddr_r also in libnsl (solaris).

2006-04-15 17:27  bchiara

	* ChangeLog, Makefile.am, configure.in, doc/Makefile.am,
	doc/omf.make, doc/xmldocs.make, src/Makefile.am: Changes to go
	around scrollkeeper oddities and other cross-platform fixes.

2006-04-13 19:52  bchiara

	* config.h.in, configure.in, src/thread_resolve.c: Tweakings to
	better handle systems without gethostbyaddr_r (OSX). Thanks to
	Jeffrey G. Gomberg for pointing out.

2006-04-07 18:20  bchiara

	* NEWS, etherape.1, html/FAQ.html, html/NEWS.html, src/names.c: